--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ html, body {
     position: absolute;
     display: block;
     top: 45px;
-    right: 0px;
+    right: -10px;
   }
 
   .exit-canva{
@@ -149,7 +149,7 @@ html, body {
 
   .logo{
     width: 70%;
-    margin-left: 20px;
+    margin-left: 10px;
   }
   
   .img-header1{
@@ -168,6 +168,7 @@ html, body {
     display: block;
     width: 60%;
     z-index: -1;
+    top: 5%;
   }
 
   h1{
@@ -182,4 +183,13 @@ html, body {
     margin-top: 1px;
     margin-left: 25px;
   }
+
+  .btn-cta{
+    font-size: 10px;
+    height: 30px;
+    width: 115px;
+    margin-top: 5px;
+    padding-top: 10px;
+  }
+
 }
