--- a/css/style.css
+++ b/css/style.css
@@ -29,16 +29,15 @@ h2{
 .navbar-csl{
     position: relative;
     font-family: home-bold;
-    font-size: 23px;
+    font-size: 20px;
     z-index: 1;
-    margin-right: 100px;
+    margin-right: 80px;
     margin-top: -15px;
 }
 
 .nav-link{
-    margin-left: 15px;
+    margin-left: 10px;
     color: white !important;
-
 }
 
 .nav-link:hover{
@@ -75,15 +74,15 @@ html, body {
 }
 
 .cta{
-    margin-left: 100px;
-    margin-top: 5%; 
+    margin-left: 110px;
+    margin-top: 3%; 
 }
 
 .btn-cta{
     font-family: home-bold;
     font-size: 20px;
     color: white;
-    border-radius: 50px;
+    border-radius: 70px;
     padding: 15px 0px 15px;
     background-color: #D36754;
     box-shadow: 5px 5px 25px -10px #979696;
@@ -92,7 +91,7 @@ html, body {
     height: 60px;
     width: 230px;
     text-align: center;
-    text-align: center;
+    margin-top: 20px;
 }
 
 .btn-cta:hover{
@@ -127,10 +126,9 @@ html, body {
   }
 
   .navbar-toggler{
-    border: outset;
     position: absolute;
     display: block;
-    top: 45px;
+    top: 35px;
     right: -10px;
   }
 
@@ -148,8 +146,9 @@ html, body {
   }
 
   .logo{
-    width: 70%;
+    width: 60%;
     margin-left: 10px;
+    margin-top: -5%;
   }
   
   .img-header1{
@@ -168,7 +167,7 @@ html, body {
     display: block;
     width: 60%;
     z-index: -1;
-    top: 10%;
+    top: 5%;
   }
 
   h1{
@@ -189,7 +188,7 @@ html, body {
     height: 40px;
     width: 115px;
     margin-top: 5px;
-    padding-top: 15px;
+    padding-top: 12px;
   }
 
 }
